--- a/index.html
+++ b/index.html
@@ -14,23 +14,39 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
-        <div class="half-width">
-            <h1>Welcome To</h1>
-            <h1><span class="name">Gazi Md. Kawsar's </span> world</h1>
-            <h3>Build Climber and Train Stopper</h3>
-            <p>
-              You might saw me jumping, climbing buildings, and stopping trains. But
-              nobody pays me a dime for that work. That's why I am learning and
-              mastering web development. I will not stop until I become the Web
-              Development Hero.
-            </p>
-            <a href="https://www.linkedin.com/in/kawsarm104/" target="blank"><button>HIRE ME</button></a>
-            
-          </div>
-          <div class="half-width">
-            <img src="images/jhankar.png" alt="" />
-          </div>
+    <section class="top-banner" id="home-page">
+      <div class="half-width">
+        <h1>Welcome To</h1>
+        <h1><span class="name">Gazi Md. Kawsar's </span> world</h1>
+        <h3>Build Climber and Train Stopper</h3>
+        <p>
+          You might saw me jumping, climbing buildings, and stopping trains. But
+          nobody pays me a dime for that work. That's why I am learning and
+          mastering web development. I will not stop until I become the Web
+          Development Hero.
+        </p>
+        <a href="https://www.linkedin.com/in/kawsarm104/" target="blank"
+          ><button>HIRE ME</button></a
+        >
+      </div>
+      <div class="half-width">
+        <img src="images/jhankar.png" alt="" />
+      </div>
+    </section>
+    <section class="dream-big">
+      <div class="half-width">
+        <img src="images/jhankar2.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h1>Dream Big</h1>
+        <h3>Become a web developer</h3>
+        <p>
+          I already learned the basic HTML and CSS. I can build any simple
+          website. I can even teach my grandma how to make simple website. My
+          goal is to build 3 websites and learn advanced topics.
+        </p>
+        <a href="#home-page"><button>DOWNLOAD RESUME</button></a>
+      </div>
     </section>
   </body>
 </html>
