footer and experience added

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner" id="home-page">
+    <section class="top-banner flexible-container" id="home-page">
       <div class="half-width">
         <h1>Welcome To</h1>
         <h1><span class="name">Gazi Md. Kawsar's </span> world</h1>
@@ -33,7 +33,7 @@
         <img src="images/jhankar.png" alt="" />
       </div>
     </section>
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
       <div class="half-width">
         <img src="images/jhankar2.png" alt="" />
       </div>
@@ -48,5 +48,29 @@
         <a href="#home-page"><button>DOWNLOAD RESUME</button></a>
       </div>
     </section>
+    <section class="experience-area">
+      <h1>Experiences</h1>
+      <div class="flexible-container">
+        <div id="web-developer-item1" class="experience-item">
+          <h2>Full Stack Developer</h2>
+          <h3 class="name">2022-Present | Pro Level Developer</h3>
+          I am the master of HTML, CSS and Javascript. I know everything needed
+          to make a website function, efficient. I didn't stop with the web. I
+          went beyond with most popular Javascript framework called Vue JS. I
+          even know the deployment, server and security. I will give you 100%
+          web solution.
+        </div>
+        <div  id="web-developer-item2" class="experience-item">
+          <h2>Baby Web Developer</h2>
+          <h3 class="name">2021-2022 | Programming Hero Learner</h3>
+          They didn't offer me a job. But I made myself as a remove web
+          developer. I made their website and showed it to them. They liked it.
+          And uploaded the content. It was fun working at Programming Hero.
+        </div>
+      </div>
+    </section>
+    <footer>
+        <p>© Gazi Kawsar 2021, a Programming Hero initiative.</p>
+    </footer>
   </body>
 </html>
