--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
       </div>
       <div class="half-width">
         <h1>Dream Big</h1>
-        <h3>Become a web developer</h3>
-        <p>
+        <h3>Become a Web Developer</h3>
+        <p class = "likha-gulo-position-a-ana">
           I already learned the basic HTML and CSS. I can build any simple
           website. I can even teach my grandma how to make simple website. My
           goal is to build 3 websites and learn advanced topics.
